@@ -1,4 +1,14 @@
-o switch to SLF4J logging facade so that any kind of logging system can be used with log4jdbc --
+x switch to SLF4J logging facade so that any kind of logging system can be used with log4jdbc --
   not just log4j
 
-o need a way to report exceptions in the sql timing log as well as the sql that failed and how long it took to fail. 
+x need a way to report exceptions in the sql timing log as well as the sql that failed and how long it took to fail.
+
+x include ydoc within javadoc
+
+o NEED TO LOOK INTO how to support isJdbcLoggingEnabled method call for Slf4jSpyLogDelegator
+
+o NEED to test & build for jdk 1.5&1.6 and jdbc 4
+
+o  log4layers product?  log4jdbc + servlet layer logging, struts layer logging, json-rpc layer logging, request header dump?
+
+o  configuration that doesn't rely on system properties (jdbc parms?)
