@@ -1,15 +1,25 @@
 <?xml version='1.0' encoding='ISO-8859-1' ?>
 
 <!--
-  Very basic ant build script.
-  tested with Apache Ant version 1.6.5
+  Ant build script for log4jdbc
+
+  Tested with Apache Ant version 1.6.5
+
+  built with jdk 1.4.2_13
 -->
 
 <project name="log4jdbc" default="all" basedir="..">
 
   <target name="all" depends="cleancompile,compile,cleanjar,jar"/>
 
-  <property name="version" value="1.01"/>
+  <!-- release version -->
+  <property name="version" value="1.1"/>
+
+  <!-- ydoc.home is only used for ydoc target for producing javadoc with generated UML
+       requires the NON-FREE ydoc utility
+       (use the javadoc target to generate regular javadoc)
+  -->
+  <property name="ydoc.home" value="/ydoc-2.2_04"/>
 
   <target name="compile" description="compile all the source code">
     <javac srcdir="src" destdir="classes" deprecation="true" debug="true">
@@ -36,7 +46,13 @@
     <delete file="build/log4jdbc-${version}.jar" description="delete the jar file"/>
   </target>
 
-  <target name="javadoc" description="generate the javadoc" >
+
+  <target name="cleanjavadoc">
+    <delete dir="doc/apidocs" />
+    <mkdir dir="doc/apidocs" />
+  </target>
+
+  <target name="javadoc" description="generate the javadoc" depends="cleanjavadoc">
     <delete dir="doc/apidocs" />
     <mkdir dir="doc/apidocs" />
     <javadoc destdir="doc/apidocs" packagenames="net.sf.log4jdbc.*"
@@ -57,6 +73,50 @@
       <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
       <link href="http://java.sun.com/j2ee/1.4/docs/api/"/>
       <link href="http://logging.apache.org/log4j/docs/api/"/>
+    </javadoc>
+  </target>
+
+
+  <target name="ydoc" description="create javadoc using ydoc doclet to include UML diagrams" depends="cleanjavadoc">
+
+    <property name="ps" value="${path.separator}"/>
+
+    <javadoc destdir="doc/apidocs" packagenames="net.sf.log4jdbc.*"
+      Windowtitle="log4jdbc ${version}"
+      Header="&lt;b&gt;&lt;a href=&quot;http://log4jdbc.sourceforge.net&quot;&gt;log4jdbc ${version}&lt;/a&gt;&lt;/b&gt;"
+      Use="true" breakiterator="true">
+      <classpath>
+        <pathelement location="$src"/>
+        <fileset dir="lib">
+          <include name="**/*.jar"/>
+        </fileset>
+      </classpath>
+      <sourcepath path="src"/>
+
+      <!-- note that the jdk source code is referenced here so that javadoc will be generated from
+          interface class methods when none is specified in the implementation -->
+      <sourcepath path="/j2sdk1.4.2_13/src"/>
+      <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+      <link href="http://java.sun.com/j2ee/1.4/docs/api/"/>
+      <link href="http://logging.apache.org/log4j/docs/api/"/>
+
+      <!-- ydoc doclet for UML diagrams, see http://www.yworks.com/en/products_ydoc.htm -->
+      <doclet name="ydoc.doclets.YStandard"
+              path="${ydoc.home}/lib/ydoc.jar${ps}${ydoc.home}/lib/class2svg.jar${ps}${ydoc.home}/resources${ps}${ydoc.home}/doc${ps}./classes">
+        <param name="-author"/>
+        <param name="-generic"/>
+        <param name="-umlautogen"/>
+        <param name="-filterpath" value="${ydoc.home}/lib/ydoc.jar"/>
+        <param name="-filter" value="ydoc.filters.ExcludeFilter"/>
+        <param name="-tag" value="y.precondition"/>
+        <param name="-tag" value="y.postcondition"/>
+        <param name="-tag" value="y.complexity"/>
+        <param name="-tag" value="param"/>
+        <param name="-tag" value="return"/>
+        <param name="-tag" value="see"/>
+        <param name="-tag" value="y.uml"/>
+        <param name="-linksource" value="true"/>
+      </doclet>
     </javadoc>
   </target>
 
