@@ -12,7 +12,7 @@ logging system.
 <p/>
 This is Open Source software:
 <p/>
-Copyright 2007 Arthur Blake
+Copyright &copy; 2007 Arthur Blake
 <p/>
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this log4jdbc except in compliance with the License.
