@@ -1,6 +1,17 @@
-           1.01 pending release
+           1.1 pending release
 
            o Fixed problem where when sql timing log was the only log turned on, log4jdbc would not recognize that
              logging was on at all.
+
+           o report sql exceptions in the sql timing log as well (when they occured during sql execution) and
+             prominently show that the sql FAILED, and display how long it tried to chug on the sql
+             before the exception was thrown
+
+           o Switch to Simple Logging Facade for Java SLF4J instead of using log4j directly, so that any underlying
+             logging system can be easily used.
+             {at this time, log4jdbc is ALWAYS on when using the log4jdbc driver as opposed to
+              log4j, when it would be turned on ONLY if one of the 4 log4jdbc logs was set to above FATAL level}
+
+           o option added to ant build script to generate javadoc with ydoc to include UML diagrams within the javadoc.
 
 2007-04-21 Initial 1.0 Release
